// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs


Table user_type {
	id uuid [primary key]
	name varchar
}

Table user {
	id uuid [primary key]
	user_type_id uuid
	email varchar
	password varchar
	first_name varchar
	last_name varchar
	phone number
	created_at datetime
	updated_at datetime
	delete_at datetime	
	created_by uuid
	updated_by uuid
	delete_by uuid
}

Table patient {
	id uuid [primary key]
	user_id uuid
	created_at datetime
	updated_at datetime
	delete_at datetime	
	created_by uuid
	updated_by uuid
	delete_by uuid
}

Table specialty {
	id uuid [primary key]
	name varchar [note: 'dermatology/genycology/etc...']
	created_at datetime
	updated_at datetime
	delete_at datetime	
	created_by uuid
	updated_by uuid
	delete_by uuid
}

Table practician {
    id uuid [primary key]
    user_id uuid
	created_at datetime
	updated_at datetime
	delete_at datetime	
	created_by uuid
	updated_by uuid
	delete_by uuid
}

Table practician_has_specialty {
	id uuid [primary key]
	practician_id uuid
	specialty_id uuid
}

Table time_slot{
	id uuid [primary key]
	user_id uuid 
	establishment_id uuid
	start_date datetime
	end_date datetime
	created_at datetime
	delete_at datetime	
	created_by uuid
	delete_by uuid
}

Table establishment {
	id uuid [primary key]
	name varchar

}

Table establishment_has_practician {
	id uuid [primary key]
	establishment_id uuid
	practician_id uuid
}

Table establishment_has_specialty {
	id uuid [primary key]
	establishment_id uuid
	specialty_id uuid
}

Table appointment {
    id uuid
	establishment_id uuid
	practician_id uuid
	patient_id uuid
    start_at datetime
    end_at datetime
    status uuid
}

Table status {
    id uuid
    name varchar [note: 'waiting_for_approval, confirmed, completed']
}

Ref: user.user_type_id > user_type.id
Ref: establishment_has_specialty.establishment_id > establishment.id
Ref: establishment_has_specialty.specialty_id > specialty.id
Ref: establishment_has_practician.establishment_id > establishment.id
Ref: establishment_has_practician.practician_id > practician.id
Ref: time_slot.user_id > user.id 
Ref: time_slot.establishment_id > establishment.id
Ref: practician_has_specialty.practician_id > practician.id
Ref: practician_has_specialty.specialty_id > specialty.id
Ref: practician.user_id > user.id
Ref: appointment.practician_id > practician.id
Ref: appointment.patient_id > patient.id
Ref: appointment.establishment_id > establishment.id
Ref: patient.user_id > user.id